Fix: Correcciones de overflows
Se ha solucionado el overflow de textos en múltiples puntos de la aplicación

--- a/frontend/src/components/AddProduct.css
+++ b/frontend/src/components/AddProduct.css
@@ -210,6 +210,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
+  overflow-wrap: anywhere;
 }
 
 .upload-product-data-form .form-group .label {
