--- a/frontend/src/components/CustomDesign.css
+++ b/frontend/src/components/CustomDesign.css
@@ -199,6 +199,7 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
+  overflow-wrap: anywhere;
 }
 
 .my-design-data-form .form-group .label {
